# vscode-devcontainer-cpp-vcpkg

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
